--- a/contact.html
+++ b/contact.html
@@ -78,6 +78,7 @@
 					<div class="nav-header">
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
 						<h1 id="fh5co-logo"><a href="index.html">LYCM</a></h1>
+						<!-- <a href="index.html" class="logo"><img src="images/logo-lycm.jpeg" alt=""></a> -->
 						<!-- START #fh5co-menu-wrap -->
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
@@ -87,7 +88,7 @@
 
 								<li><a href="about.html">About</a></li>
 								<li><a href="our-programs.html">Our Programs</a></li>
-								<li ><a href="get-involved.html"> Get Involved</a></li>
+								<li><a href="get-involved.html"> Get Involved</a></li>
 								<li class="active"><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
@@ -106,7 +107,7 @@
 								Children Mission</strong></h2>
 						<span>Join us in transforming the lives of underprivileged children through education and
 							care.</span>
-						
+
 					</div>
 				</div>
 			</div>
@@ -122,11 +123,12 @@
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and
 									Consonantia, there live the blind texts.</p>
 								<ul class="contact-info">
-									<li><i class="icon-location-pin"></i>198 West 21th Street, Suite 721 New York NY
-										10016</li>
-									<li><i class="icon-phone2"></i>+ 1235 2355 98</li>
-									<li><i class="icon-mail"></i><a href="#">info@yoursite.com</a></li>
-									<li><i class="icon-globe2"></i><a href="#">www.yoursite.com</a></li>
+									<li><i class="icon-location-pin"></i>Plot no A 59,sector 19 Dwarka New Delhi 110075
+									</li>
+									<li><i class="icon-phone2"></i><a href="tel:+91 9990145220">+91 9990145220</a></li>
+									<li><i class="icon-mail"></i><a
+											href="mailto:lycmedu@gmail.com">lycmedu@gmail.com</a></li>
+
 								</ul>
 							</div>
 							<div class="col-md-6">
@@ -172,7 +174,7 @@
 									<a href="mailto:lycmindia11@gmail.com "><i class="icon-mail"></i></a>
 									<a href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL"><i
 											class="icon-facebook2"></i></a>
-									<a href="tel:7736159897"><i class="fa fa-phone"></i></a>
+									<a href="tel:9990145220"><i class="fa fa-phone"></i></a>
 
 								</p>
 								<p>Copyright<a href="#">LYCM</a>. All Rights Reserved. <br>Made with
