--- a/contact.html
+++ b/contact.html
@@ -120,8 +120,8 @@
 						<div class="row">
 							<div class="col-md-6">
 								<h3 class="section-title">Our Address</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts.</p>
+								<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and
+									Consonantia, there live the blind texts.</p> -->
 								<ul class="contact-info">
 									<li><i class="icon-location-pin"></i>Plot no A 59,sector 19 Dwarka New Delhi 110075
 									</li>
