--- a/contact.html
+++ b/contact.html
@@ -77,8 +77,8 @@
 				<div class="container">
 					<div class="nav-header">
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-						<h1 id="fh5co-logo"><a href="index.html">LYCM</a></h1>
-						<!-- <a href="index.html" class="logo"><img src="images/logo-lycm.jpeg" alt=""></a> -->
+						<!-- <h1 id="fh5co-logo"><a href="index.html">LYCM</a></h1> -->
+						<a href="index.html" class="logo"><img src="images/logo-lycm.jpeg" alt=""></a>
 						<!-- START #fh5co-menu-wrap -->
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
