--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
 					<div class="desc animate-box">
 						<h2><strong style="font-weight: bold; color: orangered;">Support</strong> <strong>Love Your
 								Children Mission</strong></h2>
-						<span>Join us in transforming the lives of underprivileged children through education and
-							care.</span>
+						<span>Education is the birthright of every child!</span>
 						<span><a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a></span>
 					</div>
 				</div>
@@ -123,10 +122,59 @@
 					<div class="row">
 						<div class="col-md-12 text-center heading-section">
 							<h3>How We Started</h3>
-							<p>Love You Children Mission (LYCM) was founded by Mr. Linos David in 2010, inspired by his
-								experience with young drug addicts. With support from Dr. Abraham, Mr. David initiated
-								efforts to rehabilitate youth, leading to the creation of LYCM. We began our work in the
-								Goyala Dairy slum, focusing on education and care for children from a young age.</p>
+							<p style="font-weight: bold;">Welcome to Love Your Children Mission (LYCM)!</p>
+							<p>We are a non-profit organization dedicated to transforming the lives of underprivileged
+								children through education and opportunity. Founded in 2010, our journey began in Goyala
+								Dairy, where we encountered heart-wrenching scenes of malnourished children running
+								barefoot through dirt and garbage. Many teenagers were unable to read or write, lacked
+								basic hygiene knowledge, and had limited exposure to the world beyond their slum.
+
+								Today, the transformation is remarkable. Our Study Centre is alive with the energy of
+								around sixty enthusiastic kids who are not only learning but also teaching each other.
+								These children now dream big, aspiring to become doctors, army officers, police
+								officers, teachers, and more. They've embraced the desire for a better life, and despite
+								facing numerous challenges, they approach their studies with unwavering dedication.
+
+								With LYCM, these children are not just learning; they are conquering their futures. Join
+								us in making a lasting difference.
+							</p>
+							<p style="font-weight: bold;">History of the Mission</p>
+							<p>
+								Love You Children Mission (LYCM) was founded by Mr. Linos David of Delhi, inspired by
+								his profound experience with young drug addicts. In 2010, with the invaluable support of
+								Dr. Abraham from TML Hospital, he initiated rehabilitation efforts. Dr. Abraham
+								emphasized the importance of early intervention, sparking the idea of a children's
+								mission. Recognizing the challenges of rehabilitating addicted youth, Mr. David
+								envisioned providing education and care to children from a young age, laying the
+								foundation for LYCM.
+
+								Mr. David and his family along with Aby Abraham, began their transformative work in the
+								Goyala Dairy slum near Dwarka, New Delhi. Aby initiated classes focusing on basic
+								hygiene and moral values. Despite initial setbacks with paid educators, real progress
+								began when Sheeba Ma'am took charge. She started English classes, initially met with
+								disinterest. To motivate the children, she promised gifts for good performance, which
+								sparked significant improvement. Seeking further support, she reached out to her school
+								friend Mrs. Nair, who generously contributed Rs 1000 monthly for gifts. Their school
+								group also donated Rs 25,000 for learning materials, including a second-hand computer.
+
+								Regular updates on social media attracted attention, leading friends to sponsor gifts
+								and celebrate birthdays with the children. Mr. David emphasized that these gestures were
+								rewards, not charity. As the children excelled academically, their attitudes and
+								behaviors transformed. Mr. David extended the mission to other locations, facing
+								challenges due to the lack of dedicated teachers and funding constraints.
+
+								However, the Goyala Dairy Slum center became a beacon of success. Older children
+								mastered tenses, demonstrating proficiency in basic English. They regularly delivered
+								speeches on camera, showcasing their progress on Facebook. Younger children also
+								displayed significant advancements in vocabulary, writing, reading, and speaking. The
+								children transitioned from bored, disheveled individuals to confident, dedicated
+								students.
+
+								Love You Children Mission aims to replicate these success stories in other Indian slums,
+								continuing its mission of transforming lives through education. Join us in our journey
+								to make a lasting impact and inspire hope in countless young hearts.
+
+							</p>
 						</div>
 					</div>
 
@@ -218,13 +266,25 @@
 			<!-- Our Programs Ends -->
 
 			<!-- Get Involve Starts -->
+
+
+
 			<div id="fh5co-features">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
 							<h3>Get Involved with LYCM</h3>
-							<p>Join Love You Children Mission (LYCM) and make a difference in the lives of
-								underprivileged children.</p>
+							<p>Join LYCM and Make a Difference in Part-Time or Full-Time Voluntary Positions!</p>
+							<p>Are you passionate about transforming the lives of underprivileged children? Love You
+								Children Mission (LYCM) invites dedicated individuals like you to become a part of our
+								impactful team. We offer various part-time and full-time voluntary positions where you
+								can contribute to the well-being and education of these children:</p>
+							<p>Your commitment in these part-time or full-time voluntary positions can make a
+								significant difference in the lives of these children. Join us at LYCM and be a part of
+								creating a brighter future. Together, we can empower these young minds and build a
+								stronger, more compassionate society.
+							</p>
+							<p>Apply now and be the change you want to see!</p>
 						</div>
 						<div class="col-md-4">
 							<div class="feature-left">
@@ -232,11 +292,9 @@
 									<i class="icon-users"></i> <!-- Updated icon -->
 								</span>
 								<div class="feature-copy">
-									<h3>Become a Volunteer</h3>
-									<p>Are you passionate about transforming the lives of underprivileged children? Love
-										You Children Mission (LYCM) invites dedicated individuals to join our impactful
-										team. We offer various part-time and full-time voluntary positions where you can
-										contribute to the well-being and education of these children.</p>
+									<h3>Social Worker</h3>
+									<p>Make a direct impact on the community by addressing social issues and working
+										towards positive change, fostering a healthier environment for growth.</p>
 									<p>
 								</div>
 							</div>
@@ -245,14 +303,12 @@
 						<div class="col-md-4">
 							<div class="feature-left">
 								<span class="icon">
-									<i class="icon-heart"></i> <!-- Updated icon -->
+									<i class="icon-book"></i> <!-- Updated icon -->
 								</span>
 								<div class="feature-copy">
-									<h3>Happy Giving</h3>
-									<p>Your support helps us provide education, healthcare, and shelter to children in
-										need. By contributing to LYCM, you become a part of their journey towards a
-										brighter future. Every donation makes a difference and brings joy to those who
-										need it most.</p>
+									<h3>Volunteer Teacher</h3>
+									<p> Inspire young minds by sharing your knowledge and expertise. Help bridge the
+										education gap in slum areas and ignite a passion for learning.</p>
 									<p>
 								</div>
 							</div>
@@ -260,13 +316,13 @@
 						<div class="col-md-4">
 							<div class="feature-left">
 								<span class="icon">
-									<i class="icon-wallet"></i> <!-- Updated icon -->
+									<i class="icon-dribbble2"></i> <!-- Updated icon -->
 								</span>
 								<div class="feature-copy">
-									<h3>Donation</h3>
-									<p>If you would like to donate to this noble cause, please contact Love You Children
-										Mission. Your contributions support our programs in education, nursing
-										sponsorship, and hostel facilities for underprivileged children.</p>
+									<h3>Psychologist</h3>
+									<p> Provide crucial support to children facing psychological challenges, offering
+										guidance and assistance to help them overcome obstacles and thrive
+									</p>
 									<p>
 								</div>
 							</div>
@@ -283,66 +339,12 @@
 						<div class="col-md-4">
 							<div class="feature-left">
 								<span class="icon">
-									<i class="icon-users"></i> <!-- Updated icon -->
-								</span>
-								<div class="feature-copy">
-									<h3>Social Worker</h3>
-									<p>Make a direct impact on the community by addressing social issues and working
-										towards positive change. Your efforts will foster a healthier environment for
-										growth and development for these children.</p>
-									<p>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-md-4">
-							<div class="feature-left">
-								<span class="icon">
-									<i class="icon-book"></i> <!-- Updated icon -->
-								</span>
-								<div class="feature-copy">
-									<h3>Volunteer Teacher</h3>
-									<p>Inspire young minds by sharing your knowledge and expertise. Help bridge the
-										education gap in slum areas and ignite a passion for learning. Your involvement
-										will play a crucial role in the educational development of these children.</p>
-									<p>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="feature-left">
-								<span class="icon">
-									<i class="icon-dribbble2"></i> <!-- Updated icon -->
-								</span>
-								<div class="feature-copy">
-									<h3>Psychologist</h3>
-									<p>Provide crucial support to children facing psychological challenges, offering
-										guidance and assistance to help them overcome obstacles and thrive. Your
-										expertise will be essential in nurturing their mental and emotional well-being.
-									</p>
-									<p>
-								</div>
-							</div>
-						</div>
-
-					</div>
-				</div>
-			</div>
-
-			<!-- Third -->
-			<div id="fh5co-features">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="feature-left">
-								<span class="icon">
 									<i class="icon-lightbulb"></i> <!-- Updated icon -->
 								</span>
 								<div class="feature-copy">
 									<h3>Mentor</h3>
 									<p>Become a guiding light for these children, helping them navigate challenges and
-										discover their potential. Your mentorship will instill confidence and hope for
-										their future, empowering them to achieve their goals.</p>
+										discover their potential, instilling confidence and hope for the future.</p>
 									<p>
 								</div>
 							</div>
@@ -356,9 +358,33 @@
 								<div class="feature-copy">
 									<h3>Awareness Advocate</h3>
 									<p>Champion the rights of underprivileged children and raise awareness about the
-										importance of education and social support. Mobilize the community for
-										collective action to support and uplift these children.</p>
+										importance of education and social support, mobilizing the community for
+										collective action.</p>
 									<p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="feature-left">
+								<span class="icon">
+									<i class="icon-wallet"></i> <!-- Updated icon -->
+								</span>
+								<div class="feature-copy">
+									<h3>Donation</h3>
+									<p>If you would like to donate to this noble cause, please contact Love You Children
+										Mission.
+									</p>
+									<p>You can find details about our work on Facebook: [Love You Children
+										Mission]</p>
+									<a
+										href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL">https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL</a>
+									<p>
+									<h3>Account Details</h3>
+									<ul>
+										<li><strong>Account Name:</strong> Love You Children Mission</li>
+										<li><strong>Account Number:</strong> 15450200003812</li>
+										<li><strong>IFSC Code:</strong> FDRL0001545</li>
+									</ul>
 								</div>
 							</div>
 						</div>
