first updation completed

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Charity &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>LYCM</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -27,7 +27,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/logo-lycm.jpeg">
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
@@ -89,6 +89,8 @@
 								<li class="active"><a class="active" href="about.html">About</a></li>
 								<li><a href="our-programs.html">Our Programs</a></li>
 								<li><a href="get-involved.html"> Get Involved</a></li>
+								<li><a href="sponser-child.html">Sponser a child</a></li>
+								<li><a href="gallery.html"> Gallery</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
@@ -104,11 +106,10 @@
 				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5"
 					style="background-image: url('images/hero2.jpg');">
 					<div class="desc animate-box">
-						<h2><strong style="font-weight: bold; color: orangered;">Support</strong> <strong>Love Your
+						<h2><strong ">Support</strong> <strong>Love Your
 								Children Mission</strong></h2>
-						<span>Join us in transforming the lives of underprivileged children through education and
-							care.</span>
-						<span><a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a></span>
+						<span>Education is the rightbirth of every child</span>
+						<span><a class=" btn btn-primary btn-lg" href="contact.html">Contact Us</a></span>
 					</div>
 				</div>
 			</div>
@@ -119,8 +120,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12 text-center heading-section">
-							<h3>How We Started</h3>
-							<p style="font-weight: bold;">Welcome to Love Your Children Mission (LYCM)!</p>
+							<h3>Our History</h3>
+							<p style="font-weight: bold;">Welcome to Love You Children Mission (LYCM)!</p>
 							<p>We are a non-profit organization dedicated to transforming the lives of underprivileged
 								children through education and opportunity. Founded in 2010, our journey began in Goyala
 								Dairy, where we encountered heart-wrenching scenes of malnourished children running
@@ -187,100 +188,12 @@
 							<p><img src="images/childrens1.jpeg" alt="LYCM Volunteers" class="img-responsive"></p>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-md-4">
-							<div class="feature-text">
-								<h3>Love</h3>
-								<p>At LYCM, we believe in the power of love to transform lives. Our programs are
-									designed to provide not just education, but also emotional and psychological support
-									to children in need.</p>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="feature-text">
-								<h3>Compassion</h3>
-								<p>We approach every child with compassion, addressing their unique needs and
-									challenges. Our team works tirelessly to ensure each child receives the care and
-									attention they deserve.</p>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="feature-text">
-								<h3>Charity</h3>
-								<p>Charity is at the heart of our mission. By supporting LYCM, you contribute to
-									providing education, healthcare, and shelter, helping to build a better future for
-									underprivileged children.</p>
-							</div>
-						</div>
-					</div>
+				
 				</div>
 			</div>
 			<!--  About Ends -->
 
-			<!-- Gallery Starts -->
-			<div id="fh5co-portfolio">
-				<div class="container">
-
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3 text-center heading-section animate-box">
-							<h3>Our Gallery</h3>
-							<p>Snapshots of Impact: Explore Our Gallery</p>
-						</div>
-					</div>
-
-
-					<div class="row row-bottom-padded-md">
-						<div class="col-md-12">
-							<ul id="fh5co-portfolio-list">
-
-								<li class="two-third animate-box" data-animate-effect="fadeIn"
-									style="background-image: url(images/gallery2.jpeg); ">
-									<a href="#" class="color-3">
-										<div class="case-studies-summary">
-											<span>Give Love</span>
-											<h2>Donation is caring</h2>
-										</div>
-									</a>
-								</li>
-
-								<li class="one-third animate-box" data-animate-effect="fadeIn"
-									style="background-image: url(images/gallery4.jpeg); ">
-									<a href="#" class="color-4">
-										<div class="case-studies-summary">
-											<span>Give Love</span>
-											<h2>Donation is caring</h2>
-										</div>
-									</a>
-								</li>
-
-								<li class="one-third animate-box" data-animate-effect="fadeIn"
-									style="background-image: url(images/gallery3.jpeg); ">
-									<a href="#" class="color-5">
-										<div class="case-studies-summary">
-											<span>Give Love</span>
-											<h2>Donation is caring</h2>
-										</div>
-									</a>
-								</li>
-								<li class="two-third animate-box" data-animate-effect="fadeIn"
-									style="background-image: url(images/gallery1.jpeg); ">
-									<a href="#" class="color-6">
-										<div class="case-studies-summary">
-											<span>Give Love</span>
-											<h2>Donation is caring</h2>
-										</div>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-
-
-
-				</div>
-			</div>
-			<!-- Gallery ends -->
+			
 			<footer>
 				<div id="footer">
 					<div class="container">
