--- a/get-involved.html
+++ b/get-involved.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Charity &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+    <title>LYCM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
     <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -27,8 +27,8 @@
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
 
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <link rel="shortcut icon" href="favicon.ico">
+	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<link rel="shortcut icon" href="images/logo-lycm.jpeg">
 
     <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
@@ -89,6 +89,8 @@
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="our-programs.html">Our Programs</a></li>
                                 <li class="active"><a href="get-involved.html"> Get Involved</a></li>
+                                <li><a href="sponser-child.html">Sponser a Child</a></li>
+								<li><a href="gallery.html"> Gallery</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -103,10 +105,9 @@
                 <div class="fh5co-cover text-center" data-stellar-background-ratio="0.5"
                     style="background-image: url('images/hero2.jpg');">
                     <div class="desc animate-box">
-                        <h2><strong style="font-weight: bold; color: orangered;">Support</strong> <strong>Love Your
+                        <h2><strong>Support</strong> <strong>Love Your
                                 Children Mission</strong></h2>
-                        <span>Join us in transforming the lives of underprivileged children through education and
-                            care.</span>
+                        <span>Education is the rightbirth of every child</span>
                         <span><a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a></span>
                     </div>
                 </div>
