--- a/our-programs.html
+++ b/our-programs.html
@@ -1,36 +1,37 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
+<!--[if gt IE 8]><!-->
+<html class="no-js"> <!--<![endif]-->
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Charity &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>LYCM</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
- 
 
-  	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
-
+	
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="images/logo-lycm.jpeg">
 
 	<!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
-	
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -50,9 +51,10 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
-		<div id="fh5co-wrapper">
+</head>
+
+<body>
+	<div id="fh5co-wrapper">
 		<div id="fh5co-page">
 			<div class="header-top">
 				<div class="container">
@@ -80,13 +82,15 @@
 						<!-- START #fh5co-menu-wrap -->
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
-								<li >
+								<li>
 									<a href="index.html">Home</a>
 								</li>
 
 								<li><a href="about.html">About</a></li>
 								<li class="active"><a href="our-programs.html">Our Programs</a></li>
 								<li><a href="get-involved.html"> Get Involved</a></li>
+								<li><a href="sponser-child.html">Sponser a Child</a></li>
+								<li><a href="gallery.html"> Gallery</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
 						</nav>
@@ -101,85 +105,84 @@
 				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5"
 					style="background-image: url('images/hero2.jpg');">
 					<div class="desc animate-box">
-						<h2><strong style="font-weight: bold; color: orangered;">Support</strong> <strong>Love Your
+						<h2><strong ">Support</strong> <strong>Love Your
 								Children Mission</strong></h2>
-						<span>Join us in transforming the lives of underprivileged children through education and
-							care.</span>
-						<span><a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a></span>
+						<span>Education is the rightbirth of every child</span>
+						<span><a class=" btn btn-primary btn-lg" href="contact.html">Contact Us</a></span>
 					</div>
 				</div>
 			</div>
 
 			<!-- Hero Ends -->
-		
-		<!-- Our Programs Starts -->
-		<div id="fh5co-services-section">
-			<div class="container">
-				<div class="row">
-					<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-						<h3>Our Programs. Support Us</h3>
-						<p>At Love Your Children Mission (LYCM), we focus on providing education, healthcare, and
-							shelter to underprivileged children. Your support helps us make a meaningful difference
-							in their lives.</p>
-					</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="row text-center">
-					<div class="col-md-4 col-sm-4">
-						<div class="services animate-box">
-							<span><i class="icon-heart"></i></span>
-							<h3>Educational Support</h3>
-							<p>We provide tuition, school fees, and educational resources to poor children and
-								orphans, ensuring they have the opportunity to learn and grow.</p>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-4">
-						<div class="services animate-box">
-							<span><i class="icon-heart"></i></span>
-							<h3>Nursing Sponsorship</h3>
-							<p>LYCM sponsors nursing education for deserving students who have passed their 12th
-								grade, empowering them with the skills needed for a successful career in healthcare.
-							</p>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-4">
-						<div class="services animate-box">
-							<span><i class="icon-heart"></i></span>
-							<h3>Hostel Facilities</h3>
-							<p>We provide safe and comfortable hostel accommodations for poor children and orphans,
-								giving them a secure place to live while they pursue their education.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Our Programs Ends -->
 
-		<footer>
-			<div id="footer">
+			<!-- Our Programs Starts -->
+			<div id="fh5co-services-section">
 				<div class="container">
 					<div class="row">
-						<div class="col-md-6 col-md-offset-3 text-center">
-							<p class="fh5co-social-icons">
-								<a href="mailto:lycmindia11@gmail.com "><i class="icon-mail"></i></a>
-								<a href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL"><i
-										class="icon-facebook2"></i></a>
-								<a href="tel:9990145220"><i class="fa fa-phone"></i></a>
-
-							</p>
-							<p>Copyright<a href="#">LYCM</a>. All Rights Reserved. <br>Made with
-								<i class="icon-heart3"></i> by <a href="http://freehtml5.co/"
-									target="_blank">Acmeflare Technologies</a>
+						<div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+							<h3>Our Programs</h3>
+							<p>At Love You Children Mission (LYCM), we focus on providing education, healthcare, and
+								shelter to underprivileged children. Your support helps us make a meaningful difference
+								in their lives.</p>
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row text-center">
+						<div class="col-md-4 col-sm-4">
+							<div class="services animate-box">
+								<span><i class="icon-heart"></i></span>
+								<h3>Educational Support</h3>
+								<p>We provide tuition, school fees, and educational resources to poor children and
+									orphans, ensuring they have the opportunity to learn and grow.</p>
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-4">
+							<div class="services animate-box">
+								<span><i class="icon-heart"></i></span>
+								<h3>Nursing Sponsorship</h3>
+								<p>LYCM sponsors nursing education for deserving students who have passed their 12th
+									grade, empowering them with the skills needed for a successful career in healthcare.
+								</p>
+							</div>
+						</div>
+						<div class="col-md-4 col-sm-4">
+							<div class="services animate-box">
+								<span><i class="icon-heart"></i></span>
+								<h3>Hostel Facilities</h3>
+								<p>We provide safe and comfortable hostel accommodations for poor children and orphans,
+									giving them a secure place to live while they pursue their education.</p>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</footer>
-	
+			<!-- Our Programs Ends -->
 
-	</div>
-	<!-- END fh5co-page -->
+			<footer>
+				<div id="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-6 col-md-offset-3 text-center">
+								<p class="fh5co-social-icons">
+									<a href="mailto:lycmindia11@gmail.com "><i class="icon-mail"></i></a>
+									<a href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL"><i
+											class="icon-facebook2"></i></a>
+									<a href="tel:9990145220"><i class="fa fa-phone"></i></a>
+
+								</p>
+								<p>Copyright<a href="#">LYCM</a>. All Rights Reserved. <br>Made with
+									<i class="icon-heart3"></i> by <a href="http://freehtml5.co/"
+										target="_blank">Acmeflare Technologies</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</footer>
+
+
+		</div>
+		<!-- END fh5co-page -->
 
 	</div>
 	<!-- END fh5co-wrapper -->
@@ -201,10 +204,10 @@
 	<!-- Superfish -->
 	<script src="js/hoverIntent.js"></script>
 	<script src="js/superfish.js"></script>
-	
+
 	<!-- Main JS -->
 	<script src="js/main.js"></script>
 
-	</body>
-</html>
+</body>
 
+</html>
