ajith updations completed

--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
 								<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and
 									Consonantia, there live the blind texts.</p> -->
 								<ul class="contact-info">
-									<li><i class="icon-location-pin"></i>Plot no A 59,sector 19 Dwarka New Delhi 110075
+									<li><i class="icon-location-pin"></i><a href="https://www.google.com/maps/place/a,+59,+Sector+19,+Nanda+Enclave,+Dwarka,+Delhi,+110075/@28.5758368,77.0454393,17z/data=!3m1!4b1!4m9!1m2!2m1!1sPlot+no+A+59,+Sector+19+Dwarka,+New+Delhi+-+110075!3m5!1s0x390d1ae47e07a7df:0x600fe136478476bb!8m2!3d28.5758322!4d77.0503102!15sCjJQbG90IG5vIEEgNTksIFNlY3RvciAxOSBEd2Fya2EsIE5ldyBEZWxoaSAtIDExMDA3NZIBEGNvbXBvdW5kX3NlY3Rpb27gAQA?entry=ttu">Plot no A 59,sector 19 Dwarka New Delhi 110075</a>
 									</li>
 									<li><i class="icon-phone2"></i><a href="tel:+91 9990145220">+91 9990145220</a></li>
 									<li><i class="icon-mail"></i><a
