--- a/get-involved.html
+++ b/get-involved.html
@@ -27,8 +27,8 @@
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="images/logo-lycm.jpeg">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="shortcut icon" href="images/logo-lycm.jpeg">
 
     <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
@@ -90,7 +90,7 @@
                                 <li><a href="our-programs.html">Our Programs</a></li>
                                 <li class="active"><a href="get-involved.html"> Get Involved</a></li>
                                 <li><a href="sponser-child.html">Sponser a Child</a></li>
-								<li><a href="gallery.html"> Gallery</a></li>
+                                <li><a href="gallery.html"> Gallery</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -217,24 +217,17 @@
                         <div class="col-md-4">
                             <div class="feature-left">
                                 <span class="icon">
-                                    <i class="icon-wallet"></i> <!-- Updated icon -->
+                                    <i class="icon-wallet"></i>
                                 </span>
                                 <div class="feature-copy">
                                     <h3>Donation</h3>
-                                    <p>If you would like to donate to this noble cause, please contact Love You Children
+                                    <p>If you would like to donate to this noble cause, please contact
+                                        Love You
+                                        Children
                                         Mission.
                                     </p>
-                                    <p>You can find details about our work on Facebook: [Love You Children
-                                        Mission]</p>
-                                    <a
-                                        href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL">https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL</a>
-                                    <p>
-                                    <h3>Account Details</h3>
-                                    <ul>
-                                        <li><strong>Account Name:</strong> Love You Children Mission</li>
-                                        <li><strong>Account Number:</strong> 15450200003812</li>
-                                        <li><strong>IFSC Code:</strong> FDRL0001545</li>
-                                    </ul>
+
+                                    <a class="btn btn-primary btn-lg" href="sponser-child.html">Donate</a>
                                 </div>
                             </div>
                         </div>
