--- a/sponser-child.html
+++ b/sponser-child.html
@@ -26,8 +26,12 @@
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
 
- 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-     <link rel="shortcut icon" href="images/logo-lycm.jpeg">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+    <link rel="shortcut icon" href="images/logo-lycm.jpeg">
+
+    <!-- Include Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'> -->
 
@@ -77,7 +81,7 @@
                 <div class="container">
                     <div class="nav-header">
                         <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-                        <!-- <h1 id="fh5co-logo"><a href="index.html">LYCM</a></h1> -->
+                      
                         <a href="index.html" class="logo"><img src="images/logo-lycm.jpeg" alt=""></a>
                         <!-- START #fh5co-menu-wrap -->
                         <nav id="fh5co-menu-wrap" role="navigation">
@@ -125,23 +129,42 @@
                             <p>Make a difference today! Sponsor a child with Love You Children Mission. Your support
                                 provides education, healthcare, and hope for a brighter future. Join us in changing
                                 lives!
-
                             </p>
+                        </div>
+                        <div class="container-fluid py-2 my-2 ">
+                            <div class="container pt-5 account-details">
+                                <div class="row g-5">
+                                    <div class="col-lg-5 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".3s">
+                                        <div class=" position-relative">
 
-                            <h4>Account Details</h4>
-                            <ul>
-                                <p class="list-style-type: none;"><strong>Account Name:</strong> Love You Children
-                                    Mission</p>
-                                <p class="list-style-type: none;"><strong>Account Number:</strong> 15450200003812</p>
-                                <p class="list-style-type: none;"><strong>IFSC Code:</strong> FDRL0001545</p>
-                            </ul>
+                                            <div class="sponser-icon">
+                                                <img src="/images/sponsor.png" class="img-fluid" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn " data-wow-delay=".5s">
+                                        <div class=" position-relative" style="margin-top:50px;">
+
+                                            <h1 class="mb-4">Account Details</h1>
+                                            <ul class="list-unstyled">
+                                                <li><strong>Account Name:</strong> Love You Children Mission</li>
+                                                <li><strong>Account Number:</strong> 15450200003812</li>
+                                                <li><strong>IFSC Code:</strong> FDRL0001545</li>
+                                            </ul>
+                                        </div>
+
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-
-
-
                 </div>
             </div>
+
+
+
+
             <!--  About Ends -->
 
 
@@ -193,6 +216,11 @@
 
     <!-- Main JS -->
     <script src="js/main.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
 
 </body>
 
