second updation  completed

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
-	
+
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="images/logo-lycm.jpeg">
 
@@ -67,7 +67,7 @@
 						<div class="col-md-6 col-sm-6 text-right fh5co-social">
 							<a href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL" class="grow"><i
 									class="icon-facebook2"> </i></a>
-							<a href="#" class="grow"><i class="icon-twitter2"></i></a>
+									<a href="https://www.youtube.com/@loveyouchildrenmission4318" class="grow"><i class="icon-youtube"></i></a>
 							<a href="#" class="grow"><i class="icon-instagram2"></i></a>
 						</div>
 					</div>
@@ -89,7 +89,7 @@
 								<li><a href="about.html">About</a></li>
 								<li><a href="our-programs.html">Our Programs</a></li>
 								<li><a href="get-involved.html"> Get Involved</a></li>
-								<li><a href="sponser-child.html">Sponser a Child</a></li>
+								<li><a href="sponser-child.html">Sponsor a Child</a></li>
 								<li><a href="gallery.html"> Gallery</a></li>
 								<li class="active"><a href="contact.html">Contact</a></li>
 							</ul>
@@ -105,9 +105,11 @@
 				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5"
 					style="background-image: url('images/hero2.jpg');">
 					<div class="desc animate-box">
-						<h2><strong>Support</strong> <strong>Love Your
+						<h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
+
+						<h2> <strong>Love You
 								Children Mission</strong></h2>
-						<span>Education is the rightbirth of every child</span>
+						<span>Education is the birthright of every child</span>
 
 					</div>
 				</div>
@@ -124,7 +126,9 @@
 								<!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and
 									Consonantia, there live the blind texts.</p> -->
 								<ul class="contact-info">
-									<li><i class="icon-location-pin"></i><a href="https://www.google.com/maps/place/a,+59,+Sector+19,+Nanda+Enclave,+Dwarka,+Delhi,+110075/@28.5758368,77.0454393,17z/data=!3m1!4b1!4m9!1m2!2m1!1sPlot+no+A+59,+Sector+19+Dwarka,+New+Delhi+-+110075!3m5!1s0x390d1ae47e07a7df:0x600fe136478476bb!8m2!3d28.5758322!4d77.0503102!15sCjJQbG90IG5vIEEgNTksIFNlY3RvciAxOSBEd2Fya2EsIE5ldyBEZWxoaSAtIDExMDA3NZIBEGNvbXBvdW5kX3NlY3Rpb27gAQA?entry=ttu">Plot no A 59,sector 19 Dwarka New Delhi 110075</a>
+									<li><i class="icon-location-pin"></i><a
+											href="https://www.google.com/maps/@28.5782954,77.0301103,3a,75y,28.19h,83.68t/data=!3m6!1e1!3m4!1sTdOexIA9D4WHEadaOY5h8w!2e0!7i13312!8i6656?coh=205409&entry=ttu">Plot
+											no A 59 Sector 19, Dwarka New Delhi 110075</a>
 									</li>
 									<li><i class="icon-phone2"></i><a href="tel:+91 9990145220">+91 9990145220</a></li>
 									<li><i class="icon-mail"></i><a
