--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<div class="col-md-6 col-sm-6 text-right fh5co-social">
 							<a href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL" class="grow"><i
 									class="icon-facebook2"> </i></a>
-							<a href="#" class="grow"><i class="icon-twitter2"></i></a>
+							<a href="https://www.youtube.com/@loveyouchildrenmission4318" class="grow"><i class="icon-youtube"></i></a>
 							<a href="#" class="grow"><i class="icon-instagram2"></i></a>
 						</div>
 					</div>
@@ -93,7 +93,7 @@
 								<li><a href="about.html">About</a></li>
 								<li><a href="our-programs.html">Our Programs</a></li>
 								<li><a href="get-involved.html"> Get Involved</a></li>
-								<li><a href="sponser-child.html">Sponser a Child</a></li>
+								<li><a href="sponser-child.html">Sponsor a Child</a></li>
 								<li><a href="gallery.html"> Gallery</a></li>
 								<li><a href="contact.html">Contact</a></li>
 							</ul>
@@ -114,9 +114,10 @@
 							<div class="carousel-caption">
 
 								<div class="container carousel-content">
-									<h1 class="text-light font-weight-bold "> <strong>Support Love You Children
+									<h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
+									<h1 class="text-light font-weight-bold"> <strong>Love You Children
 											Mission</strong></h1>
-									<h3 class="text-light">Education is the rightbirth of every child
+									<h3 class="text-light">Education is the birthright of every child
 									</h3>
 									<a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a>
 
@@ -127,9 +128,10 @@
 							<img src="images/carousal3.jpeg" class="img-fluid carousel-img" alt="Second slide">
 							<div class="carousel-caption">
 								<div class="container carousel-content">
-									<h1 class="text-light font-weight-bold "> <strong>Support Love You Children
+									<h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
+									<h1 class="text-light font-weight-bold "> <strong>Love You Children
 											Mission</strong></h1>
-									<h3 class="text-light">Education is the rightbirth of every child
+									<h3 class="text-light">Education is the birthright of every child
 									</h3>
 									<a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a>
 
@@ -140,9 +142,10 @@
 							<img src="images/carousal2.jpeg" class="img-fluid carousel-img" alt="Third slide">
 							<div class="carousel-caption">
 								<div class="container carousel-content">
-									<h1 class="text-light font-weight-bold "> <strong>Support Love You Children
+									<h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
+									<h1 class="text-light font-weight-bold "> <strong>Love You Children
 											Mission</strong></h1>
-									<h3 class="text-light">Education is the rightbirth of every child
+									<h3 class="text-light">Education is the birthright of every child
 									</h3>
 									<a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a>
 
@@ -206,9 +209,11 @@
 										giving them a secure place to live while they pursue their education.</p>
 								</div>
 							</div>
+
+							
 							<div class="row">
 								<div class="col-md-6">
-									<div class="feature-text">
+									<div class="feature-text-lc">
 										<h3>Love</h3>
 										<p>At LYCM, we believe in the power of love to transform lives. Our programs are
 											designed to provide not just education, but also emotional and psychological
@@ -217,7 +222,7 @@
 									</div>
 								</div>
 								<div class="col-md-6">
-									<div class="feature-text">
+									<div class="feature-text-lc">
 										<h3>Compassion</h3>
 										<p>We approach every child with compassion, addressing their unique needs and
 											challenges. Our team works tirelessly to ensure each child receives the care
