--- a/sponser-child.html
+++ b/sponser-child.html
@@ -71,7 +71,8 @@
                         <div class="col-md-6 col-sm-6 text-right fh5co-social">
                             <a href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL" class="grow"><i
                                     class="icon-facebook2"> </i></a>
-                            <a href="#" class="grow"><i class="icon-twitter2"></i></a>
+                            <a href="https://www.youtube.com/@loveyouchildrenmission4318" class="grow"><i
+                                    class="icon-youtube"></i></a>
                             <a href="#" class="grow"><i class="icon-instagram2"></i></a>
                         </div>
                     </div>
@@ -81,7 +82,7 @@
                 <div class="container">
                     <div class="nav-header">
                         <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-                      
+
                         <a href="index.html" class="logo"><img src="images/logo-lycm.jpeg" alt=""></a>
                         <!-- START #fh5co-menu-wrap -->
                         <nav id="fh5co-menu-wrap" role="navigation">
@@ -93,7 +94,7 @@
                                 <li><a class="active" href="about.html">About</a></li>
                                 <li><a href="our-programs.html">Our Programs</a></li>
                                 <li><a href="get-involved.html"> Get Involved</a></li>
-                                <li class="active"><a href="sponser-child.html">Sponser a child</a></li>
+                                <li class="active"><a href="sponser-child.html">Sponsor a child</a></li>
                                 <li><a href="gallery.html"> Gallery</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
@@ -110,10 +111,12 @@
                 <div class="fh5co-cover text-center" data-stellar-background-ratio="0.5"
                     style="background-image: url('images/hero2.jpg');">
                     <div class="desc animate-box">
-                        <h2><strong ">Support</strong> <strong>Love Your
-								Children Mission</strong></h2>
-						<span>Education is the rightbirth of every child</span>
-						<span><a class=" btn btn-primary btn-lg" href="contact.html">Contact Us</a></span>
+                        <h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
+
+                        <h2> <strong>Love You
+                                Children Mission</strong></h2>
+                        <span>Education is the birthright of every child</span>
+
                     </div>
                 </div>
             </div>
