--- a/get-involved.html
+++ b/get-involved.html
@@ -67,7 +67,7 @@
                         <div class="col-md-6 col-sm-6 text-right fh5co-social">
                             <a href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL" class="grow"><i
                                     class="icon-facebook2"> </i></a>
-                            <a href="#" class="grow"><i class="icon-twitter2"></i></a>
+                                    <a href="https://www.youtube.com/@loveyouchildrenmission4318" class="grow"><i class="icon-youtube"></i></a>
                             <a href="#" class="grow"><i class="icon-instagram2"></i></a>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                                 <li><a href="about.html">About</a></li>
                                 <li><a href="our-programs.html">Our Programs</a></li>
                                 <li class="active"><a href="get-involved.html"> Get Involved</a></li>
-                                <li><a href="sponser-child.html">Sponser a Child</a></li>
+                                <li><a href="sponser-child.html">Sponsor a Child</a></li>
                                 <li><a href="gallery.html"> Gallery</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
@@ -99,19 +99,20 @@
             </header>
 
             <!-- Hero Starts -->
-
             <div class="fh5co-hero">
-                <div class="fh5co-overlay"></div>
-                <div class="fh5co-cover text-center" data-stellar-background-ratio="0.5"
-                    style="background-image: url('images/hero2.jpg');">
-                    <div class="desc animate-box">
-                        <h2><strong>Support</strong> <strong>Love Your
-                                Children Mission</strong></h2>
-                        <span>Education is the rightbirth of every child</span>
-                        <span><a class="btn btn-primary btn-lg" href="contact.html">Contact Us</a></span>
-                    </div>
-                </div>
-            </div>
+				<div class="fh5co-overlay"></div>
+				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5"
+					style="background-image: url('images/hero2.jpg');">
+					<div class="desc animate-box">
+						<h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
+
+						<h2> <strong>Love You
+								Children Mission</strong></h2>
+						<span>Education is the birthright of every child</span>
+
+					</div>
+				</div>
+			</div>
 
             <!-- Hero Ends -->
 
