--- a/get-involved.html
+++ b/get-involved.html
@@ -67,7 +67,8 @@
                         <div class="col-md-6 col-sm-6 text-right fh5co-social">
                             <a href="https://www.facebook.com/loveyouchildrenmission?mibextid=ZbWKwL" class="grow"><i
                                     class="icon-facebook2"> </i></a>
-                                    <a href="https://www.youtube.com/@loveyouchildrenmission4318" class="grow"><i class="icon-youtube"></i></a>
+                            <a href="https://www.youtube.com/@loveyouchildrenmission4318" class="grow"><i
+                                    class="icon-youtube"></i></a>
                             <a href="#" class="grow"><i class="icon-instagram2"></i></a>
                         </div>
                     </div>
@@ -100,19 +101,19 @@
 
             <!-- Hero Starts -->
             <div class="fh5co-hero">
-				<div class="fh5co-overlay"></div>
-				<div class="fh5co-cover text-center" data-stellar-background-ratio="0.5"
-					style="background-image: url('images/hero2.jpg');">
-					<div class="desc animate-box">
-						<h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
+                <div class="fh5co-overlay"></div>
+                <div class="fh5co-cover text-center" data-stellar-background-ratio="0.5"
+                    style="background-image: url('images/hero2.jpg');">
+                    <div class="desc animate-box">
+                        <h1><strong class="text-uppercase" style="color:orangered">Support</strong></h1>
 
-						<h2> <strong>Love You
-								Children Mission</strong></h2>
-						<span>Education is the birthright of every child</span>
+                        <h2> <strong>Love You
+                                Children Mission</strong></h2>
+                        <span>Education is the birthright of every child</span>
 
-					</div>
-				</div>
-			</div>
+                    </div>
+                </div>
+            </div>
 
             <!-- Hero Ends -->
 
@@ -121,17 +122,20 @@
 
 
             <div id="fh5co-features">
-                <div class="container">
+                <div class="container ">
                     <div class="row">
                         <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
                             <h3>Get Involved with LYCM</h3>
                             <p>Join LYCM and Make a Difference in Part-Time or Full-Time Voluntary Positions!</p>
                             <p>Are you passionate about transforming the lives of underprivileged children? Love You
-                                Children Mission (LYCM) invites dedicated individuals like you to become a part of our
-                                impactful team. We offer various part-time and full-time voluntary positions where you
+                                Children Mission (LYCM) invites dedicated individuals like you to become a part of
+                                our
+                                impactful team. We offer various part-time and full-time voluntary positions where
+                                you
                                 can contribute to the well-being and education of these children:</p>
                             <p>Your commitment in these part-time or full-time voluntary positions can make a
-                                significant difference in the lives of these children. Join us at LYCM and be a part of
+                                significant difference in the lives of these children. Join us at LYCM and be a part
+                                of
                                 creating a brighter future. Together, we can empower these young minds and build a
                                 stronger, more compassionate society.
                             </p>
@@ -171,10 +175,75 @@
                                 </span>
                                 <div class="feature-copy">
                                     <h3>Psychologist</h3>
-                                    <p> Provide crucial support to children facing psychological challenges, offering
+                                    <p> Provide crucial support to children facing psychological challenges,
+                                        offering
                                         guidance and assistance to help them overcome obstacles and thrive
                                     </p>
                                     <p>
+                                </div>
+                            </div>
+                        </div>
+
+
+
+
+
+                        <div id="fh5co-feature">
+                            <div class="container voluntary-second-section">
+                                <div class="row">
+
+
+                                    <div class="col-md-4">
+                                        <div class="feature-left">
+                                            <span class="icon">
+                                                <i class="icon-lightbulb"></i>
+                                            </span>
+                                            <div class="feature-copy">
+                                                <h3>Mentor</h3>
+                                                <p>Become a guiding light for these children, helping them navigate
+                                                    challenges
+                                                    and
+                                                    discover their potential, instilling confidence and hope for the
+                                                    future.</p>
+                                                <p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-4">
+                                        <div class="feature-left">
+                                            <span class="icon">
+                                                <i class="icon-megaphone"></i>
+                                            </span>
+                                            <div class="feature-copy">
+                                                <h3>Awareness Advocate</h3>
+                                                <p>Champion the rights of underprivileged children and raise
+                                                    awareness about the
+                                                    importance of education and social support, mobilizing the
+                                                    community for
+                                                    collective action.</p>
+                                                <p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="feature-left">
+                                            <span class="icon">
+                                                <i class="icon-wallet"></i>
+                                            </span>
+                                            <div class="feature-copy">
+                                                <h3>Donation</h3>
+                                                <p>If you would like to donate to this noble cause, please contact
+                                                    Love You
+                                                    Children
+                                                    Mission.
+                                                </p>
+
+                                                <a class="btn btn-primary btn-lg" href="sponser-child.html">Donate</a>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
                             </div>
                         </div>
@@ -184,58 +253,7 @@
             </div>
 
             <!-- Second -->
-            <div id="fh5co-features">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4">
-                            <div class="feature-left">
-                                <span class="icon">
-                                    <i class="icon-lightbulb"></i> <!-- Updated icon -->
-                                </span>
-                                <div class="feature-copy">
-                                    <h3>Mentor</h3>
-                                    <p>Become a guiding light for these children, helping them navigate challenges and
-                                        discover their potential, instilling confidence and hope for the future.</p>
-                                    <p>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="col-md-4">
-                            <div class="feature-left">
-                                <span class="icon">
-                                    <i class="icon-megaphone"></i> <!-- Updated icon -->
-                                </span>
-                                <div class="feature-copy">
-                                    <h3>Awareness Advocate</h3>
-                                    <p>Champion the rights of underprivileged children and raise awareness about the
-                                        importance of education and social support, mobilizing the community for
-                                        collective action.</p>
-                                    <p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="feature-left">
-                                <span class="icon">
-                                    <i class="icon-wallet"></i>
-                                </span>
-                                <div class="feature-copy">
-                                    <h3>Donation</h3>
-                                    <p>If you would like to donate to this noble cause, please contact
-                                        Love You
-                                        Children
-                                        Mission.
-                                    </p>
-
-                                    <a class="btn btn-primary btn-lg" href="sponser-child.html">Donate</a>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-            </div>
             <!-- Get Involve Ends -->
 
             <footer>
